[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-sim"
version = "0.1.0"
description = "A from-scratch simulator for Probabilistic Robotics at Olin College of Engineering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]